2006-03-15  Alfred M. Szmidt  <ams@gnu.org>

	* kalloc.c: #include <malloc.h>.
	(init_hook, malloc_hook, free_hook): New functions.
	(__malloc_initialize_hook): New variable.
	(malloc, free): Functions removed.

2003-05-07  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* strfcns.c: #include <stdarg.h> instead of <varargs.h>.
	(strbuild): Use <stdarg.h>-style for handling variable argument
	list.
	* load.c: Don't #include <varargs.h>.

2002-07-03  Roland McGrath  <roland@frob.com>

	* elf-load.c (exec_load): Fix e_machine checking.

	* elf-load.c (exec_load): Fix typos in last change.

2002-06-22  Roland McGrath  <roland@frob.com>

	* load.c (boot_script_exec_cmd): Twiddle decls of serverboot_bunzip2
	and serverboot_gunzip.

	* elf-load.c (exec_load) [__alpha__]: Grok Elf64_* headers and check
	for EM_ALPHA.
	* exec.c (set_regs) [__alpha__]: Alpha implementation snarfed from CMU
	file bootstrap/alpha/exec.c in MK83a.

	* load.c (boot_script_exec_cmd): Cast int to intptr_t before char *.

2002-06-14  Roland McGrath  <roland@frob.com>

	* default_pager.c: #include "default_pager_S.h"

2002-05-29  Roland McGrath  <roland@frob.com>

	* bootstrap.c (main): int -> integer_t for boot_script values.

2002-05-23  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile: Fix last change properly, by relaxing the rule again
	and adding our source dir before the exec dir.

2002-05-23  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile: Fix last change, constraining vpath even further.

2002-05-20  Ognyan Kulev <ogi@fmi.uni-sofia.bg>

	* Makefile: Move inclusion of ../Makeconf before using $(srcdir)
	and constrain vpath directives to avoid using ../exec/exec.o.

2002-05-07  Roland McGrath  <roland@frob.com>

	* default_pager.c (part_id): Add const to argument type.

2002-03-23  Roland McGrath  <roland@frob.com>

	Excised default pager functionality from serverboot.
	* Makefile (SRCS): Move def_pager_setup.c default_pager.c kalloc.c to
	(EXTRA_DIST): ... here.
	(OBJS): Remove *Server.o from here.